# calctl

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json
docs/superpowers/plans/: 2026-03-19-calctl-hardening.md
docs/superpowers/specs/: 2026-03-19-calctl-hardening-design.md
src/calctl/: __init__.py  calendar.py  cli.py  errors.py  formatting.py
tests/: conftest.py  test_calendar.py  test_cli.py  test_formatting.py
