[project]
name = "calctl"
version = "0.1.0"
description = "macOS Calendar CLI using EventKit"
requires-python = ">=3.12"
dependencies = [
    "pyobjc-framework-EventKit>=11.0",
]

[project.scripts]
calctl = "calctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
