[project]
name = "calctl"
version = "0.1.0"
description = "macOS Calendar CLI using EventKit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Umur Karatay", email = "umur@karatay.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]
dependencies = [
    "pyobjc-framework-EventKit>=11.0",
    "pyobjc-framework-CoreLocation>=11.0",
    "python-dateutil>=2.9",
    "typer>=0.15",
]

[project.scripts]
calctl = "calctl.cli:main"

[project.urls]
Homepage = "https://github.com/ukaratay/calctl"
Repository = "https://github.com/ukaratay/calctl"
Issues = "https://github.com/ukaratay/calctl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",
    "ANN",
    "PLR2004",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportAttributeAccessIssue = "warning"
