[project]
name = "calctl"
version = "0.1.0"
description = "macOS Calendar CLI using EventKit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Durmus Karatay", email = "durmus@karatay.me" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]
dependencies = [
    "pyobjc-framework-EventKit>=11.0",
    "pyobjc-framework-CoreLocation>=11.0",
    "python-dateutil>=2.9",
    "typer>=0.15",
]

[project.scripts]
calctl = "calctl.cli:main"

[project.urls]
Homepage = "https://github.com/ukaratay/calctl"
Repository = "https://github.com/ukaratay/calctl"
Issues = "https://github.com/ukaratay/calctl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",
    "ANN",
    "PLR2004",
    "SLF001",   # testing private methods is standard in unit tests
    "ARG002",   # pytest fixtures required in signature for side effects
    "PLC0415",  # inline imports needed for runtime mock patching
    "SIM117",   # nested with statements sometimes needed for test clarity
    "I001",     # cannot sort imports inside test function bodies
    "F841",     # unused variable assignments sometimes needed in test structure
    "FBT001",   # bool params in test helper functions are fine
    "FBT002",   # bool default params in test helper functions are fine
    "PLR0913",  # test helpers and fixtures often need many parameters
    "PLR0915",  # test setup functions can be long by nature
]
"src/calctl/calendar.py" = [
    "ANN401",   # Any is required for PyObjC return types
    "N806",     # PyObjC module names are PascalCase (EventKit, Foundation, CoreLocation)
    "PLC0415",  # lazy imports required for macOS-only modules
    "FBT001",   # bool positional params in EK callback signatures
    "FBT002",   # bool default positional params
    "ERA001",   # section header comments misidentified as commented-out code
    "TRY003",   # descriptive exception messages don't need to be extracted
    "EM101",    # same justification as TRY003
    "EM102",    # same justification as TRY003
    "BLE001",   # broad exception needed when parsing unknown third-party formats
    "PLR2004",  # magic values in PyObjC bridge comparisons
    "C901",     # EventKit API requires complex branching by design
    "PLR0912",  # same justification as C901
    "PLR0913",  # same justification as C901
    "PLR0915",  # same justification as C901
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportAttributeAccessIssue = "warning"
# Test infrastructure patterns — accessing private helpers and module internals
# is standard in unit tests; these would require massive refactoring to avoid
reportPrivateUsage = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
# Lambda parameters in mock side_effect assignments are untyped by nature
reportUnknownLambdaType = "warning"
# pytest built-in fixtures (capsys, monkeypatch) have no type stubs
reportMissingParameterType = "warning"
reportUnknownParameterType = "warning"
# Unparameterized dict literals in test data fixtures
reportMissingTypeArgument = "warning"
